# Northstar-Support-Copilot

./: .gitignore  DEMO_SCRIPT.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
data/: 01_account_access.md  02_api_authentication.md  03_webhooks.md  04_service_incidents.md  05_data_imports.md  06_notifications.md  07_roles_permissions.md  08_integrations.md  09_performance.md  10_backups_exports.md  11_mobile_app.md
scripts/: build_policy_pdf.py
src/northstar_persona_support.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/support_agent/: __init__.py  agent.py  cli.py  config.py  documents.py  escalation.py  generation.py  models.py  persona.py  ui.py  vector_store.py
tests/: test_agent.py  test_escalation.py  test_persona.py  test_retrieval.py
